[package]
name = "callm"
description = "Run Generative AI models directly on your hardware"
version = "0.2.0"
edition = "2021"
authors = ["MistApproach"]
license = "MIT"
repository = "https://github.com/MistApproach/callm"
keywords = ["AI", "LLM", "ML", "GenAI", "candle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0"
log = "0.4"
minijinja = "2.12"
serde = "1.0"
serde_json = "1.0"
tokenizers = "0.22"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
rand = "0.9"
ahash = "0.8.12"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
